# ComfyUI_Simple_Web_Browser_Grok

./: Simple_Web_Browser.py  __init__.py  pyproject.toml
js/: Simple_Web_Browser.js
